--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -66,29 +66,29 @@
                     <span class="id">B21DCAT164</span>
                 </li>
                 <li>
-                    <a target="_blank" href="https://github.com/SonNTB21DCAT164/Iot_Project">
+                    <a target="_blank" href="https://github.com/SonNTB21DCAT164/Project_IoT">
                         <i class="fa-brands fa-github"></i>
                         <span class="github">SonNTB21DCAT164</span>
                     </a>
                 </li>
                 <li>
                     <a target="_blank"
-                        href="https://github.com/SonNTB21DCAT164/Iot_Project/blob/main/B%C3%A1o%20c%C3%A1o%20b%C3%A0i%20t%E1%BA%ADp%20l%E1%BB%9Bn%20IoT%20v%C3%A0%20%E1%BB%A8ng%20d%E1%BB%A5ng.pdf">
+                        href="https://github.com/SonNTB21DCAT164/Project_IoT/blob/main/B%C3%A1o%20c%C3%A1o%20m%C3%B4n%20h%E1%BB%8Dc%20IoT%20v%C3%A0%20%E1%BB%A9ng%20d%E1%BB%A5ng.pdf">
                         <i class="fa-regular fa-file-pdf"></i>
                         <span class="pdf">PDF file</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://web.postman.co/me/collections">
+                    <a target="_blank" href="https://iot222-1690.postman.co/workspace/IoT_Project~bdf57512-3c8f-4230-a0d1-0b552d6ee0cf/collection/37906535-a8293a16-7c24-4b5f-a3f8-777ff88081bd?action=share&creator=37906535">
                         <img src="../img/postman-icon.svg" alt="postman" class="postman-img">
-                        <span class="postman">Nguyen Truong Son</span>
+                        <span class="postman">API documentation</span>
                     </a>
                 </li>
             </ul>
             <div class="home__social">
                 <a target="_blank" href="https://www.facebook.com/profile.php?id=100017892636846"><i
                         class='bx bxl-facebook'></i></a>
-                <a target="_blank" href="https://x.com/sonnt1308"><i class='bx bxl-twitter'></i></a>
+                <a target="_blank" href="https://x.com/a3a4a5b3b2"><i class='bx bxl-twitter'></i></a>
                 <a target="_blank" href="https://www.instagram.com/truongson2931/"><i
                         class='bx bxl-instagram-alt'></i></a>
             </div>
